# guns-germs-steel

./: Cargo.toml  GameOverview.md  LICENSE  README.md
.cursor/rules/: 00-project-structure.mdc  10-rust-bevy-guidelines.mdc  20-bevy-schedule-and-state.mdc  30-adding-features.mdc  40-assets-and-visuals.mdc  50-maintaining-game-overview.mdc
src/: constants.rs  main.rs
src/components/: components.rs
src/resources/: band_center.rs  camera.rs  camera_position.rs  camera_zoom.rs  game_grid.rs  game_state.rs  mod.rs  population_count.rs  seed.rs  tick_count.rs  ui_elements.rs
src/systems/: creature.rs  gameplay.rs  graphics.rs  input.rs  mod.rs  setup.rs  ux.rs
